# cupcake

./: .gitignore  BASELINE_CODEBASE_STATE.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEBUGGING.md  ENVIRONMENT_VARIABLES.md  ENV_VAR_DOCUMENTATION_INDEX.md  ENV_VAR_FINAL_SUMMARY.md  ENV_VAR_IMPLEMENTATION_TRACKER.md  ENV_VAR_MISSING_ADDENDUM.md  ENV_VAR_REMOVAL_PLAN.md  ENV_VAR_VERIFICATION_REPORT.md  ENV_VAR_VULNERABILITIES.md  FIX_REPORT.md  IMPLEMENTATION_LOG.md  IMPLEMENTATION_LOG_BUILTINS_REFACTOR.md  IMPLEMENTATION_LOG_RULEBOOK_SECURITY.md  IMPLEMENTATION_TRACKER.md.archive  PARSER_ANALYSIS.md  PHASE1_IMPLEMENTATION_GUIDE.md.archive  PRE_IMPLEMENTATION_CHECKLIST.md  PR_DESCRIPTION.md  README.md  REFERENCE_HOOKS.md  ROUTING_ANALYSIS.md  SECURITY_REFACTOR_ACTION_PLAN.md.archive  SLSA_APPROACH.md  SLSA_IMPLEMENTATION_LOG.md  SLSA_IMPLEMENTATION_PLAN.md  SLSA_KEY_INFO.md  SLSA_L3.md  TESTING_SETUP_GUIDE.md  TEST_TRUST_FIX.md  TOB4_IMPLEMENTATION_LOG.md  TUI_TEST_INSTRUCTIONS.md  TYPE_SAFE_RESPONSE_ANALYSIS.md  VALIDATION_ANALYSIS.md  VUL_BYPASS_EXTERNAL_SUGGESTED_PLAN.md  (+15 more)
assets/: USAGE.md  (+1 more)
cupcake-cli/: Cargo.toml
cupcake-cli/src/: CLAUDE.md  catalog_cli.rs  harness_config.rs  main.rs  trust_cli.rs  watchdog_cli.rs
cupcake-cli/src/migrations/: mod.rs
cupcake-cli/tests/: harness_integration_test.rs  init_command_test.rs  trust_cli_parser_test.rs
cupcake-core/: Cargo.toml
cupcake-core/.cupcake/debug/: 2025-09-24_14-27-04_perf-test.txt  2025-09-25_11-34-05_perf-test.txt  2025-09-26_11-49-57_perf-test.txt  2025-09-26_13-43-46_perf-test.txt  2025-09-28_14-33-50_perf-test.txt
cupcake-core/.cupcake/debug/routing/: routing_map_2025-09-18_14-31-39.dot  routing_map_2025-09-18_14-31-39.json  routing_map_2025-09-18_14-31-39.txt  routing_map_2025-09-18_14-32-00.dot  routing_map_2025-09-18_14-32-00.json  routing_map_2025-09-18_14-32-00.txt
cupcake-core/benches/: engine_benchmark.rs
cupcake-core/src/: bindings.rs  debug.rs  lib.rs
cupcake-core/src/bundle/: governance.rs  mod.rs
cupcake-core/src/catalog/: index.rs  installer.rs  lock.rs  manifest.rs  mod.rs  registry.rs  tests.rs
cupcake-core/src/debug/: tests.rs
cupcake-core/src/engine/: builtins.rs  catalog_overlay.rs  compiler.rs  config.rs  decision.rs  executor.rs  global_config.rs  guidebook.rs  metadata.rs  mod.rs  routing.rs  routing_debug.rs  rulebook.rs  scanner.rs  synthesis.rs  trace.rs  wasm_runtime.rs
cupcake-core/src/engine/synthesis/: merge_input_updates.rs  mod.rs  tests.rs
cupcake-core/src/harness/: CLAUDE.md  mod.rs  types.rs
cupcake-core/src/harness/events/: mod.rs
cupcake-core/src/harness/response/: CLAUDE.md  mod.rs  types.rs
cupcake-core/src/preprocessing/: command_path_extractor.rs  config.rs  mod.rs  normalizers.rs  script_inspector.rs  symlink_resolver.rs
cupcake-core/src/telemetry/: context.rs  mod.rs  otlp.rs  span.rs  writer.rs
cupcake-core/src/trust/: CLAUDE.md  error.rs  hasher.rs  manifest.rs  mod.rs  verifier.rs
cupcake-core/src/validator/: decision_event_matrix.rs  mod.rs  rules.rs  tests.rs
cupcake-core/src/watchdog/: backend.rs  config.rs  mod.rs  openrouter.rs  prompts.rs  types.rs
cupcake-core/tests/: CLAUDE.md  action_async_test.rs  action_discovery_test.rs  action_edge_cases_test.rs  action_execution_test.rs  adversarial_cross_tool.rs  adversarial_script_execution.rs  adversarial_string_matching.rs  adversarial_symlink.rs  ask_with_signals_test.rs  builtin_integration.rs  claude_code_routing_test.rs  concat_workaround_test.rs  factory_updated_input_test.rs  global_actions_final_test.rs  global_actions_simple_test.rs  global_actions_test.rs  global_actions_verify_test.rs  global_builtins_config_test.rs  global_builtins_integration_test.rs  global_config_test.rs  global_dual_engine_test.rs  governance_bundle_integration_test.rs  grep_glob_symlink_bypass.rs  harness_claude_eval_test.rs  harness_cursor_eval_test.rs  harness_factory_eval_test.rs  minimal_ask_test.rs  opa_lookup_test.rs  opencode_integration_test.rs  preprocessing_cursor_test.rs  preprocessing_integration.rs  protected_paths_integration.rs  rulebook_custom_paths.rs  rulebook_custom_paths_cursor.rs  rulebook_security_integration.rs  signal_integration_test.rs  signal_parsing_test.rs  test_global_file_lock_patterns.rs  test_helpers.rs  (+7 more)
cupcake-core/tests/common/: mod.rs
cupcake-core/tests/fixtures/: global_system_evaluate.rego  minimal_policy.rego  system_evaluate.rego
cupcake-core/tests/fixtures/trust_parser_test/: guidebook.yml  rulebook.yml
cupcake-py/: Cargo.toml  README.md  pyproject.toml
cupcake-py/examples/: async_usage.py  basic_usage.py  thread_safety_demo.py
cupcake-py/python/cupcake/: __init__.py  installer.py
cupcake-py/src/: lib.rs
cupcake-py/test-fixtures/.cupcake/policies/: test_basic.rego
cupcake-py/tests/: test_integration.py
cupcake-ts/: .gitignore  Cargo.toml  README.md  index.ts  installer.ts  jest.config.js  package-lock.json  package.json  tsconfig.json
cupcake-ts/__test__/: basic.test.ts
cupcake-ts/examples/: async-server.ts  basic.ts  vercel-ai-sdk.ts
cupcake-ts/playground/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
cupcake-ts/playground/src/: App.tsx  index.css  vite-env.d.ts
cupcake-ts/playground/src/components/: Button.tsx
cupcake-ts/playgroundEvolved/: IMPLEMENTATION_LOG.md  README.md  package.json
cupcake-ts/playgroundEvolved/examples/: demo.ts  python_package_install.rego
cupcake-ts/playgroundEvolved/examples/signals/: package_check.sh
cupcake-ts/playgroundEvolved/src/: index.ts
cupcake-ts/playgroundEvolved/src/builders/: addContext.ts  canOnly.ts  mustAsk.ts  mustHalt.ts  mustModify.ts
cupcake-ts/playgroundEvolved/src/compiler/: context.ts  expressions.ts  format.ts  reason.ts
cupcake-ts/playgroundEvolved/src/core/: tool.ts
cupcake-ts/playgroundEvolved/src/expressions/: base.ts  factory.ts  number.ts  reason.ts
cupcake-ts/policy/: package-lock.json  package.json  tsconfig.json
cupcake-ts/policy/examples/: examples.ts
cupcake-ts/src/: lib.rs
cupcake-ts/test-fixtures/: README.md
(+1053 files in other folders)
