[package]
name = "cupcake"
version = "0.1.0"
edition = "2021"

[features]
default = []
tui = ["ratatui", "tui-input"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml_ng = "0.10.0"
clap = { version = "4.5.41", features = ["derive"] }
anyhow = "1.0.98"
thiserror = "2.0.12"
regex = "1.11.1"
bincode = "1.3.3"
directories = "6.0.0"
walkdir = "2.5.0"
glob = "0.3.2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "process", "time", "macros", "fs", "io-util", "sync"] }
uuid = { version = "1.0", features = ["v4"] }
libc = "0.2"

# TUI dependencies for interactive init wizard
ratatui = { version = "0.29.0", optional = true }
tui-input = { version = "0.14.0", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.0"

# TUI-specific tests that require the tui feature
[[test]]
name = "tui_compilation_test"
path = "tests/tui_compilation_test.rs"
required-features = ["tui"]

[[test]]
name = "tui_discovery_test"
path = "tests/tui_discovery_test.rs"
required-features = ["tui"]

[[test]]
name = "tui_discovery_unit_test"
path = "tests/tui_discovery_unit_test.rs"
required-features = ["tui"]

[[test]]
name = "tui_modal_extraction_test"
path = "tests/tui_modal_extraction_test.rs"
required-features = ["tui"]

[[test]]
name = "tui_review_test"
path = "tests/tui_review_test.rs"
required-features = ["tui"]

[[test]]
name = "tui_state_transitions_test"
path = "tests/tui_state_transitions_test.rs"
required-features = ["tui"]
