[package]
name = "cupcake-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for Cupcake - governance and augmentation orchestrator for agentic AI"

[dependencies]
# Core library
cupcake-core = { workspace = true }

# CLI
clap = { version = "4.5.41", features = ["derive"] }
directories = { workspace = true }
dirs = { workspace = true }

# Core dependencies needed for CLI
serde_json = { workspace = true }
serde = { workspace = true }
serde_yaml_ng = "0.10.0"
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Table display
tabled = "0.15"

# HTTP client for downloading plugins
reqwest = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# File system utilities
walkdir = "2.5"

# Archive handling (for catalog package command)
flate2 = "1.0"
tar = "0.4"

# Version comparison
semver = "1.0"

[[bin]]
name = "cupcake"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.2"

[features]
deterministic-tests = ["cupcake-core/deterministic-tests"]
watchdog = ["cupcake-core/watchdog"]
catalog = ["cupcake-core/catalog"]
default = ["watchdog", "catalog"]