[package]
name = "cupcake-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core engine for Cupcake - governance and augmentation orchestrator for agentic AI"

[dependencies]
# Core (from workspace)
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = "0.10.0"
anyhow = { workspace = true }
thiserror = { workspace = true }

# WASM Runtime
wasmtime = { workspace = true }

# Async Runtime
tokio = { workspace = true }
futures = { workspace = true }

# Utilities
chrono = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
directories = "6.0.0"

# Trust System
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
insta = { workspace = true }
criterion = { workspace = true }

[features]
# This feature should ONLY be enabled for testing.
# It forces the trust system's HMAC key derivation to be deterministic.
deterministic-tests = []

[lib]
name = "cupcake_core"
path = "src/lib.rs"

[[bench]]
name = "engine_benchmark"
harness = false