[package]
name = "cupcake-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core engine for Cupcake - governance and augmentation orchestrator for agentic AI"

[dependencies]
# Core (from workspace)
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = "0.10.0"
anyhow = { workspace = true }
thiserror = { workspace = true }

# WASM Runtime
wasmtime = { workspace = true }

# Async Runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = "0.1"

# HTTP Client (for Watchdog and Catalog)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

# Archive handling (for Catalog)
flate2 = { version = "1.0", optional = true }
tar = { version = "0.4", optional = true }

# Utilities
chrono = { workspace = true }
semver = "1.0"
dirs = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
directories = "6.0.0"
uuid = { version = "1.11", features = ["v7", "fast-rng"] }
tempfile = { workspace = true }
shell-words = "1.1"

# Trust System
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
insta = { workspace = true }
criterion = { workspace = true }
env_logger = "0.11"
log = "0.4"
serial_test = "3.1"

[features]
# This feature should ONLY be enabled for testing.
# It forces the trust system's HMAC key derivation to be deterministic.
deterministic-tests = []

# Watchdog LLM-as-judge feature
watchdog = ["dep:reqwest"]

# Catalog feature (registry browsing, installation)
catalog = ["dep:reqwest", "dep:flate2", "dep:tar"]

[lib]
name = "cupcake_core"
path = "src/lib.rs"

[[bench]]
name = "engine_benchmark"
harness = false
